Project config settings for 16 - it's broke

--- a/standard-java/pom.xml
+++ b/standard-java/pom.xml
@@ -65,6 +65,8 @@
                     <compilerArgs>
                         <arg>--enable-preview</arg>
                     </compilerArgs>
+                    <source>16</source>
+                    <target>16</target>
                 </configuration>
             </plugin>
         </plugins>
